去除冗余代码，修正编译报警项